# adk-chatkit

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  poe.toml  pyproject.toml
examples/backend/: pyproject.toml
examples/backend/src/backend/: _app.py  _config.py  _dishka_providers.py  _refreshed_session_service.py  _runner_manager.py  main.py
examples/backend/src/backend/agents/: __init__.py  temp_agent.py
examples/backend/src/backend/agents/airline/: __init__.py  _agent.py  _processor.py  _server.py  _state.py  _tools.py
examples/backend/src/backend/agents/cat/: __init__.py  _agent.py  _server.py  _state.py  _tools.py
examples/backend/src/backend/agents/cat/widgets/: __init__.py  (+2 more)
examples/backend/src/backend/agents/facts/: __init__.py  _agent.py  _sample_widget.py  _server.py  _state.py  _tools.py  _weather.py
examples/backend/src/backend/agents/knowledge/: __init__.py  _agent.py  _documents.py  _server.py  _tools.py  _vector_store.py
examples/backend/src/backend/agents/metro/: __init__.py  _agent.py  _context.py  _server.py  _title_agent.py  _tools.py
examples/backend/src/backend/agents/news/: __init__.py  _event_finder_agent.py  _news_agent.py  _puzzle_agent.py  _server.py  _title_agent.py  _utils.py
examples/backend/src/backend/agents/widgets/: __init__.py  _agent.py  _server.py  _tasks_widget.py  _tools.py
examples/backend/src/backend/api/: agents.py  cat.py  facts.py  health.py  knowledge.py  metro_map.py  news.py  support.py  widgets.py
examples/backend/tests/airline/: __init__.py
examples/backend/tests/facts/: __init__.py
(+85 files in other folders)
