[project]
name = "backend"
version = "0.0.1"
description = "Backend for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dishka>=1.6.0",
    "fastapi[standard]>=0.116.1",
    "fastapi-cognito>=2.9.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "google-adk>=1.16.0",
    "litellm>=1.76.3",
    "adk-chatkit",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "lancedb>=0.25.2",
    "langchain-openai>=1.0.1",
    "langchain-ollama>=1.0.0",
    "pypdf>=6.1.3",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.mypy]
extend = "../../pyproject.toml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
